<resources>

    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="app_name">IMessage</string>


    <!--thông tin người dùng-->
    <string name="user_name">Tên</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="phone">Số điện thoại</string>
    <string name="birth_day">Ngày sinh</string>
    <string name="old_pass">Mật khẩu cũ</string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="profile">Hồ sơ người dùng</string>
    <string name="confirm_pass">Nhập lại mật khẩu</string>

    <!--Thông báo-->
    <string name="content_dialog_logout">Bạn có chắc muốn đăng xuất</string>
    <string name="message_chat_empty">Vui lòng nhập tin nhắn bạn muốn gừi</string>
    <string name="email_verity">Vui lòng xác nhận email của bạn</string>
    <string name="login_fail">Email hoặc mật khẩu không chính xác</string>
    <string name="incorrect_pass">Mật khẩu không khớp</string>
    <string name="verification_email_success">Email xác minh đã được gửi tới</string>
    <string name="verification_email_fail">" Không gửi được email xác minh"</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="message_done">Đã hoàn thành</string>
    <string name="change_pass_success">Thay đổi mật khẩu thành công</string>
    <string name="change_pass_fail">Thay đổi mật khẩu thất bại</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="register_fail">Đăng ký thất bại</string>

    <!--valid input-->
    <string name="valid_pass">Mật khẩu phải có ít nhất 8 ký tự, 1 ký tự số, 1 chữ in hoa và 1 ký tự đặc biệt</string>
    <string name="empty_input">Không được bỏ trống mục này</string>
    <string name="valid_phone">Số điện thoại không đúng định dạng</string>
    <string name="message_input">Vui lòng nhập đầy đủ thông tin</string>
    <string name="valid_emali">Email không đúng định dạng</string>
    <string name="valid_birth">Bạn phải đủ 18 tuổi</string>
    <string name="valid_name">Tên không có ký tự đặc biệt</string>
    <string name="valid_input">Dữ liệu không hợp lệ</string>

    <!--các nút chức năng-->
    <string name="action_settings">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="choose_language">Chọn ngôn ngữ</string>
    <string name="change_language">Đổi ngôn ngữ</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="edit">Sửa thông tin</string>
    <string name="save">Lưu thay đổi</string>
    <string name="choose_date">Chọn ngày</string>
    <string name="Tutorial">Hướng dẫn IMessage</string>

    <!--button-->
    <string name="logout_confirm">Xác nhân</string>
    <string name="logout_cancel">Hủy</string>
    <string name="confirm">Xác nhận</string>
    <string name="signup">Đăng ký tại đây</string>
    <string name="login_here">Đăng nhập tại đây</string>

    <string name="search">Tìm kiếm...</string>
    <string name="hint_input_mess">Nhập tin nhắn...</string>
    <string name="dont_have_acc">"Bạn không có tài khoản? "</string>
    <string name="have_acc">"Bạn đã có tài khoản? "</string>

    <!--Bottom Tab -->

</resources>