<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:paddingTop="20dp"
    android:paddingHorizontal="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ĐĂNG KÝ"
            android:textColor="@color/primary"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteGray"
            android:hint="Số điện thoại">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputMoblie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/lblErrorMoblie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteGray"
            android:text="LBL error"
            android:textColor="#FF0000"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteGray"
            android:layout_marginTop="5dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/lblErrorEmail"
            android:layout_height="wrap_content"
            android:background="@color/whiteGray"
            android:text="LBL error"
            android:textColor="#FF0000"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/whiteGray"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/lblErrorPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteGray"
            android:text="LBL error"
            android:textColor="#FF0000"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteGray"
            android:layout_marginTop="5dp"
            android:hint="@string/confirm_pass"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/lblErrorRePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whiteGray"
            android:text="LBL error"
            android:textColor="#FF0000"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/register" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/google"
            android:text="@string/google"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do you have a account?" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Login here"
                android:textColor="@color/primary"
                android:id="@+id/tvLogin"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>